# SpamOverflow

./: .gitignore  AI.md  Dockerfile.app  Dockerfile.worker  README.md  docker-compose.yml  main.tex  main.tf  pyproject.toml
spam/: __init__.py
spam/models/: emails.py
spam/views/: routes.py
spamworker/: spamworker.py
