[tool.poetry]
name = "spamoverflow-86lak"
version = "0.1.0"
description = ""
authors = ["86.LAK <lakshan392@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
flask-sqlalchemy = "^3.1.1"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.28"
pendulum = "^3.0.0"
boto3 = "^1.34.87"
celery = {extras = ["sqs"], version = "^5.4.0"}
redis = "^5.0.3"
configparser = "^7.0.0"
gunicorn = "*"
gevent = "^24.2.1"
kombu = "^5.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
